		- JTS support improvements
		- GEOS C-API support (2.2.0 and higher)
		- Initial support for topology modelling
		- Stricter mapping between DBF and SQL integer and
		  string attributes
		- Wider and cleaner regression test suite
		- postgis_version() made a C function
		- produced lwpostgis_upgrade.sql as part of the build process
		- old jdbc code removed from release

PostGIS 1.0.6
2005/12/06
	- Fixed palloc(0) call in collection deserializer (only gives
	  problem with --enable-cassert)
	- Fixed bbox cache handling bugs
	- Fixed geom_accum(NULL, NULL) segfault
	- Initial support for postgresql 8.2
	- Fixed segfault in addPoint()
	- Fixed short-allocation in lwcollection_clone()
	- Fixed bug in segmentize()
	- Added missing SRID mismatch checks in GEOS ops
	- Fixed bbox computation of SnapToGrid output

PostGIS 1.0.5
2005/11/25
	- New "Reporting Bugs" chapter in manual
	- Segfault fix in shp2pgsql (utf8 encoding)
	- Fixed computation of null values fraction in analyzer
	- Fixed return code of shp2pgsql
	- Fixed handling of trailing dots in dbf numerical attributes
	- Schema aware postgis_proc_upgrade.pl, support for pgsql 7.2+
	- Fixed a small bug in the getPoint4d_p() low-level function
	- Fixed memory alignment problems
	- Speedup of serializer functions
	- Bug fix in force_4d, force_3dm and force_3dz functions

PostGIS 1.0.4
2005/09/09
	- Memory leak plugged in GiST indexing
	- Segfault fix in transform() handling of proj4 errors
	- Fixed some proj4 texts in spatial_ref_sys (missing +proj)
	- GiST indexing cleanup
	- Loader: fixed string functions usage, reworked NULL objects check,
	  fixed segfault on MULTILINESTRING input.
	- Fixed bug in MakeLine dimension handling
	- Looser syntax acceptance in box3d parser
	- Documentation improvements
	- More robust selectivity estimator
	- Minor speedup in distance()
	- Minor cleanups
	- Fixed bug in translate() corrupting output bounding box
	- Initial implementation of postgis_proc_upgrade script

PostGIS 1.0.3