@@ -6,11 +6,6 @@ SO_MAJOR_VERSION=1
 SO_MINOR_VERSION=1
 SO_MICRO_VERSION=0CVS
 
-# sql scripts version
-SCRIPTS_MAJOR_VERSION=0
-SCRIPTS_MINOR_VERSION=3
-SCRIPTS_MICRO_VERSION=1
-
 # JDBC code version
 JDBC_MAJOR_VERSION=1
 JDBC_MINOR_VERSION=1
