@@ -22,7 +22,7 @@ SHLIB_LINK 	= $(DLFLAGS)
 POSTGIS_VERSION = $(SO_MAJOR_VERSION).$(SO_MINOR_VERSION) USE_GEOS=$(USE_GEOS) USE_PROJ=$(USE_PROJ) USE_STATS=$(USE_STATS)
 POSTGIS_LIB_VERSION = $(SO_MAJOR_VERSION).$(SO_MINOR_VERSION).$(SO_MICRO_VERSION)
 POSTGIS_BUILD_DATE := $(shell date -u "+%Y-%m-%d %H:%M:%S")
-SCRIPTS_VERSION=$(SCRIPTS_MAJOR_VERSION).$(SCRIPTS_MINOR_VERSION).$(SCRIPTS_MICRO_VERSION)
+SCRIPTS_VERSION=$(POSTGIS_LIB_VERSION)
 
 
 #---------------------------------------------------------------
